# Inside of setup.cfg
[metadata]
name = hypoinvpy
description = A Python interface for HypoInverse earthquake relocation software
long_description = file: README.md
keywords = seismology, earthquake relocation, hypoinverse
license = MIT license
classifiers=
      Development Status :: 4 - Beta
      License :: OSI Approved :: MIT License
      Programming Language :: Python :: 3.10
